--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .nav-cms {
-    min-width: 12%;
+    min-width: 14%;
     height: 900px;
     background-color: #151523;
     padding: 0 10px 0 10px;
@@ -33,6 +33,11 @@ body {
     margin: 20px auto 10px;
 }
 
+.cms-icon {
+    width: 20px;
+    height: 20px;
+}
+
 .logged-username, .role {
     color: #CAC9DC;
     text-align: center;
@@ -40,7 +45,7 @@ body {
 }
 
 .cms-side-container {
-    width: 88%;
+    width: 86%;
     height: 900px;
 }
 
@@ -82,7 +87,7 @@ body {
     cursor: default;
 }
 
-.cms-nav-item, .cms-nav-item-dance a, .cms-nav-item-jazz a, .cms-nav-item-culinary a {
+.cms-nav-item a, .cms-nav-item-dance a, .cms-nav-item-jazz a, .cms-nav-item-culinary a {
     color: #CAC9DC;
     text-decoration: none;
     font-size: 1.7rem;
