--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
 }
 
 body {
@@ -14,7 +15,6 @@ body {
     min-width: 1600px;
     max-width: 2560px;
     margin: 0 auto;
-    font-family: 'Nunito', sans-serif;
 }
 
 .user-logo {
@@ -138,4 +138,64 @@ body {
 
 .cms-logout-link img {
     height: 30px;
+}
+
+
+/* ## login screen */
+.login-header {
+    margin: 0 auto;
+    height: 75px;
+    max-width: 2560px;
+    background-color: #148582;
+}
+
+main h1 {
+    text-align: center;
+    color: #151523;
+    margin: 20px 0 0 0;
+}
+
+.login-form {
+    width: 15%;
+    margin: 100px auto;
+}
+
+.login-form-item {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.login-form-item label {
+    width: 100%;
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin: 15px 0 0;
+}
+
+.login-form-item input {
+    width: 100%;
+    font-size: 1.2rem;
+}
+
+.password-forgotten {
+    text-align: right;
+}
+
+.password-forgotten a {
+    font-weight: lighter;
+    text-decoration: none;
+    color: #151523;
+}
+
+.login-form button {
+    float: right;
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 20px 0 0 0;
+    padding: 3px 15px;
+    background-color: white;
+    border: 2px solid #151523;
+    border-radius: 5px;
+    cursor: pointer;
 }
