rotating arrows on hover cms nav

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -110,6 +110,9 @@ body {
     font-weight: bold;
 }
 
+.cms-nav-item-dance:hover img, .cms-nav-item-jazz:hover img, .cms-nav-item-culinary:hover img {
+    transform: rotate(180deg);
+}
 
 /* ## header of cms */
 .cms-header {
