--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* ## cms nav-bar ## */
@@ -33,15 +33,17 @@ body {
 .user-logo {
     width: 50px;
     height: 50px;
+    margin: 20px auto 10px;
+
     background-color: var(--main-lightblue);
     border-radius: 50%;
-    margin: 20px auto 10px;
 }
 .cms-dashboard-personal {
     width: 50%;
+    margin: 0 auto;
+
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
     justify-content: center;
 }
 .cms-dashboard-personal span {
@@ -63,18 +65,18 @@ body {
 /* ## cms navbar */
 .nav-cms {
     min-width: 14%;
-    height: 900px;
-    background-color: var(--main-blue);
-    padding: 0 10px 0 10px;
     height: 100vh;
+    padding: 0 10px 0 10px;
+
+    background-color: var(--main-blue);
 }
 .cms-nav-icon {
     width: 20px;
     height: 20px;
 }
 .cms-nav-ul {
-    list-style-type: none;
     margin: 50px 0 0 0;
+    list-style-type: none;
 }
 #no-pointer {
     cursor: default;
@@ -108,25 +110,31 @@ body {
 
 /* ## header of cms */
 .cms-header {
-    height: 75px;
-    background-color: var(--main-green);
+    height: 7vh;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    background-color: var(--main-green);
 }
 .cms-logout-link {
-    text-decoration: none;
-    color: var(--main-blue);
+    margin: 0 0 0 10px;
+
     font-weight: bold; 
     font-size: 1.5rem;
-    margin: 0 0 0 10px;
+
+    text-decoration: none;
+    color: var(--main-blue);
 }
 .header-searchbar {
-    border: none;
-    font-size: 1.5rem;
-    border-radius: 2px;
     margin: 0 10px 0 0;
     padding: 0 0 0 5px;
+
+    border: none;
+    border-radius: 2px;
+
+    font-size: 1.5rem;
 }
 .cms-logout-link img {
     height: 30px;
@@ -157,15 +165,17 @@ body {
 
 /* ## login screen */
 .login-header {
-    margin: 0 auto;
-    height: 75px;
     max-width: 2560px;
+    height: 7vh;
+    margin: 0 auto;
+
     background-color: var(--main-green);
 }
 .login-title {
+    margin: 20px 0 0 0;
+
     text-align: center;
     color: var(--main-blue);
-    margin: 20px 0 0 0;
 }
 
 
@@ -175,15 +185,16 @@ body {
     margin: 100px auto;
 }
 .login-form-item {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
 }
 .login-form-item label {
     width: 100%;
+    margin: 15px 0 0;
+
     font-weight: bold;
     font-size: 1.2rem;
-    margin: 15px 0 0;
 }
 .login-form-item input {
     width: 100%;
@@ -204,14 +215,17 @@ body {
 
 /* ## Login button */
 .login-form button {
-    float: right;
-    font-size: 1rem;
-    font-weight: bold;
     margin: 20px 0 0 0;
     padding: 3px 15px;
-    background-color: var(--white);
+    float: right;
+
+    font-size: 1rem;
+    font-weight: bold;
+   
     border: 2px solid var(--main-blue);
     border-radius: 5px;
+
+    background-color: var(--white);
     cursor: pointer;
 }
 
