--- a/app/public/css/footer.css
+++ b/app/public/css/footer.css
@@ -1,7 +1,7 @@
 .footer-clean {
     padding:50px 0;
-    background-color:#151523 !important;
-    color:#4b4c4d;
+    background-color:#fff;
+    color:#fff;
     overflow: auto;
   }
   
@@ -10,6 +10,7 @@
     margin-bottom:12px;
     font-weight:bold;
     font-size:16px;
+    color:#fff;
   }
   
   .footer-clean ul {
@@ -49,13 +50,13 @@
   
   .footer-clean .item.social > a {
     font-size:24px;
-    width:200px;
+    width:40px;
     height:40px;
     line-height:40px;
     display:inline-block;
     text-align:center;
     border-radius:50%;
-    border:1px solid #ccc;
+    border:1px solid #fff;
     margin-left:10px;
     margin-top:22px;
     color:inherit;
@@ -74,7 +75,7 @@
     display:inline-block;
     text-align:center;
     border-radius:50%;
-    border:1px solid #ccc;
+    border:1px solid #fff;
     margin-left:10px;
     margin-top:22px;
     color:inherit;
