--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -3,3 +3,72 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Footer */
+.container{
+	max-width: 1170px;
+	margin:auto;
+}
+.row{
+	display: flex;
+	flex-wrap: wrap;
+}
+ul{
+	list-style: none;
+}
+.footer{
+	background-color: #151523;
+    padding: 2%;
+}
+.footer-col{
+   width: 20%;
+   padding: 1%;
+   color: #ffffff;
+}
+.footer-col h4{
+	font-size: 18px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 5%;
+	font-weight: 500;
+	position: relative;
+}
+
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+}
+
+.footer-col .social-links a{
+	font-size: 25px;
+	display: block;
+	height: 40px;
+	width: 40px;
+	text-align: center;
+	color: #ffffff;
+}
+
+.footer-col .flag-links a{
+	font-size: 25px;
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	text-align: center;
+}
+
+/* Dance */
+
+/* banner dance */
+
+.banner-dance{
+	background-color: black;
+}
+.dance-title{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	text-align: center;
+}
