--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -125,11 +125,81 @@
 
 /* banner dance */
 
-.banner-dance{
-	background-color: black;
+.Banner-dance{
+	background-image: url("/images/banner-dance.jfif");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	
 }
+
+
 .dance-title{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: white;
+	font-size: 64px;
 	text-align: center;
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
 }
+
+.dance-undertitle{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 30px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
+}
+
+.dance-description{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 24px;
+	margin-top: 1.5%;
+	margin-bottom: 1.5%;
+	margin-left: 22%;
+	margin-right: 22%;
+	margin: 22%, 1.5%;
+	text-align: center;
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
+}
+
+.navbuttons-dance{
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
+}
+
+.button-performers{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 20;
+	background-color: #4983F8;
+	padding: 18px 55px; 
+	border: none;
+	margin: 2%;
+}
+.button-tickets{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 20;
+	background-color: #4983F8;
+	padding: 18px 55px; 
+	border: none;
+	margin: 2%;
+}
+.button-venues{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 20;
+	background-color: #4983F8;
+	border: none;
+	padding: 18px 55px; 
+	margin: 2%;
+}
+
+
