--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -126,7 +126,7 @@
 /* banner dance */
 
 .Banner-dance{
-	background-image: url("/images/banner-dance.jfif");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/banner-dance.jfif");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	
@@ -179,18 +179,20 @@
 	color: white;
 	font-size: 20;
 	background-color: #4983F8;
-	padding: 18px 55px; 
+	padding: 18px; 
 	border: none;
 	margin: 2%;
+	width: 212px;
 }
 .button-tickets{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: white;
 	font-size: 20;
 	background-color: #4983F8;
-	padding: 18px 55px; 
+	padding: 18px; 
 	border: none;
 	margin: 2%;
+	width: 212px;
 }
 .button-venues{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -198,8 +200,107 @@
 	font-size: 20;
 	background-color: #4983F8;
 	border: none;
-	padding: 18px 55px; 
+	padding: 18px; 
 	margin: 2%;
+	width: 212px;
 }
+
+/* Jazz */
+
+/* banner jazz */
+
+.Banner-jazz{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/jazz-banner.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	
+}
+
+
+.jazz-title{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 64px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
+}
+
+.jazz-undertitle{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 30px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
+}
+
+.jazz-description{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 24px;
+	margin-top: 1.5%;
+	margin-bottom: 1.5%;
+	margin-left: 22%;
+	margin-right: 22%;
+	margin: 22%, 1.5%;
+	text-align: center;
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
+}
+
+.navbuttons-jazz{
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
+}
+
+.button-tickets-jazz{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 20;
+	background-color: #4983F8;
+	padding: 18px; 
+	border: none;
+	margin: 2%;
+	width: 212px;
+}
+.button-venues-jazz{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 20;
+	background-color: #4983F8;
+	border: none;
+	padding: 18px; 
+	margin: 2%;
+	width: 212px;
+}
+
+/* culinary */
+
+/* banner culinary */
+
+.Banner-culinary{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/banner-culinary.png");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	
+}
+
+
+.culinary-title{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 72px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+ 	justify-content: center;
+	padding: 6%;
+}
+
 
 
