--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -7,6 +7,9 @@
     --form-input-border: #909090;
 
     --white: #FFFFFF;
+    --black: #000000;
+
+    --table-accent: #B4C5E4;
   }
 
 * {
@@ -17,7 +20,7 @@
 }
 
 body {
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 /* ## cms nav-bar ## */
@@ -412,7 +415,8 @@ canvas {
 .overview-container-info {
     width: 100%;
     height: 40vh;
-    border: 1px solid black;
+
+    margin: 0 0 10vh 0;
 
     display: flex;
     flex-wrap: wrap;
@@ -420,7 +424,8 @@ canvas {
 
 .overview-container-table {
     width: 100%;
-    height: 53vh;
+    height: 43vh;
+    background-color: var(--form-input-bg);
 }
 
 
@@ -441,7 +446,7 @@ canvas {
 }
 
 .overview-image {
-    border-left: 1px solid black;
+    border-left: 1px solid var(--black);
     width: calc(40% - 20px);
     height: 80%;
     margin: 0 20px 0 0;
@@ -455,6 +460,8 @@ canvas {
 
     display: flex;
     align-items: center;
+    background-color: var(--white);
+    border-top: 2px solid var(--main-lightblue);
 }
 
 .overview-btns-left {
@@ -478,9 +485,15 @@ canvas {
 
 .overview-btns-left li a:hover {
     background-color: var(--main-green);
-    border: var(--main-green);
-    color: white;
+    color: var(--white);
     font-weight: bold;
+}
+
+.btns-left-active {
+    background-color: var(--main-green);
+    color: var(--white);
+    font-weight: bold;
+    border: var(--main-green);
 }
 
 
@@ -500,12 +513,6 @@ canvas {
     width: 24px;
     height: 24px;
     border-radius: 2px;
-}
-
-
-
-.table {
-    border-top: 1px solid black;
 }
 
 
@@ -534,4 +541,64 @@ canvas {
 
     color: var(--main-blue);
     background-color: var(--form-input-bg);
+}
+
+.form-item textarea {
+    width: 100%;
+    
+    overflow-y: scroll;
+    resize: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: var(--main-blue);
+
+    border: none;
+    background-color: var(--form-input-bg);
+}
+
+
+.lower-form-img img {
+    top: 60%;
+}
+
+
+
+.table-wrapper {
+    height: 100%;
+    overflow-y: auto;
+    position: relative;
+}
+
+table {
+    width: 100%;
+    font-size: 1.2rem;
+    font-weight: bold;
+    background-color: var(--form-input-bg);
+    border-top: 2px solid var(--main-lightblue);
+    border-bottom: 2px solid var(--main-lightblue);
+    border-collapse: collapse;
+    text-align: left;
+    overflow: auto;
+}
+
+tr:nth-child(even) {
+    background-color: var(--table-accent);
+  }
+
+th {
+    position: sticky; 
+    top: 0;
+    padding: 15px 0 15px 5px;
+    font-size: 1.3rem;
+}
+
+td {
+    padding: 5px 0 5px 5px;
+    font-style: italic;
+}
+
+table img {
+    width: 35px;
+    height: 35px;
+    border-radius: 3px;
 }
