--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -2,9 +2,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* ## nav website */
+
+.nav-homepage{
+	margin:auto;
+    display:flex;
+    color: white;
+    position: absolute;
+    top: 0px;
+    z-index: 999;
+    width: 100%;
+}
+/* ## nav Homepage^^ */
 .nav-website{
 	margin:auto;
     display:flex;
@@ -132,4 +144,64 @@
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: white;
 	text-align: center;
+}
+
+/*----------homePage---------------*/
+
+
+
+/*----------header---------------*/
+.banner-container{
+    background-color: black;
+    height: 50vh;
+}
+#banner-picture{
+    opacity: 0.7;
+    width: 100%;
+    height: 50vh;
+
+}
+.banner-text{
+    text-align: center;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+.banner-text h1{
+font-size: 10vh;
+font-weight: bold;
+}
+/*----------section---------------*/
+.article-container{
+    padding-left: 10vw;
+    padding-right: 10vw;
+    margin-top: 5vh;
+}
+.article-flex{
+    display: flex;
+    padding-bottom: 5vh;
+}
+.article-text-flex{
+    display: flex;
+    flex-direction: column;
+}
+article h1{
+    font-size: 6vh;
+    font-weight: bold;
+}
+article p{
+    width: 85%;
+    font-size: 2vh;
+    font-weight: bold;
+}
+#events{
+    padding-left: 1%;
+}
+.maps{
+    width:100%;
+    height:40vh;
+    border:0;
+    padding-bottom: 5vh;
 }
