--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -19,9 +19,9 @@
     font-family: 'Nunito', sans-serif;
 }
 
-body {
+/* body {
     overflow: hidden;
-}
+} */
 
 /* ## cms nav-bar ## */
 .cms-container {
