--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -16,6 +16,9 @@
     z-index: 999;
     width: 100%;
 }
+
+
+
 /* ## nav Homepage^^ */
 .nav-website{
 	margin:auto;
@@ -23,18 +26,19 @@
     background-color: #151523;
     color: white;
 }
+
 .nav-logo{
     display:flex;
     width: 50px;
     height: 50px;
 }
 
-
 .nav-list-left {
     display:flex;
     max-width: 95%;
 	list-style: none;
 }
+
 .nav-list-right {
 	margin-left: auto;
     display:flex;
@@ -42,10 +46,10 @@
 	list-style: none;
 }
 
-
 .nav-item, .nav-item-b{
 	margin: 5px 0 0 0;
 }
+
 .nav-item a {
     display:flex;
     padding: 14px 16px;
@@ -53,6 +57,7 @@
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .nav-item-b a{
     display:flex;
     padding: 14px 16px;
@@ -61,15 +66,16 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
 .icons-nav{
     display: flex;
     padding: 14px 16px;
     font-size: 25px;
 }
+
 .icons-nav a{
     margin: 15px;
 }
+
 .icons-nav span {
 	color: white;
 }
@@ -133,17 +139,17 @@
 	text-align: center;
 }
 
-/* Dance */
 
-/* banner dance */
 
+
+/* ## Dance */
+/* ## banner dance */
 .Banner-dance{
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/banner-dance.jfif");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/banner/banner-dance.jfif");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	
 }
-
 
 .dance-title{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -196,6 +202,7 @@
 	margin: 2%;
 	width: 212px;
 }
+
 .button-tickets{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: white;
@@ -206,6 +213,7 @@
 	margin: 2%;
 	width: 212px;
 }
+
 .button-venues{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: white;
@@ -217,17 +225,17 @@
 	width: 212px;
 }
 
-/* Jazz */
 
-/* banner jazz */
 
+
+/* ## Jazz */
+/* ## banner jazz */
 .Banner-jazz{
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/jazz-banner.jpg");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/banner/jazz-banner.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	
 }
-
 
 .jazz-title{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -291,17 +299,16 @@
 	width: 212px;
 }
 
-/* culinary */
 
-/* banner culinary */
 
+/* ## culinary */
+/* ## banner culinary */
 .Banner-culinary{
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/banner-culinary.png");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/banner/banner-culinary.png");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	
 }
-
 
 .culinary-title{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -317,23 +324,20 @@
 
 
 
-}
-
-/*----------homePage---------------*/
-
-
-
-/*----------header---------------*/
+/* ## Home page */
+/* ## homePage header */
 .banner-container{
     background-color: black;
     height: 50vh;
 }
+
 #banner-picture{
     opacity: 0.7;
     width: 100%;
     height: 50vh;
 
 }
+
 .banner-text{
     text-align: center;
     position: absolute;
@@ -342,36 +346,50 @@
     transform: translate(-50%, -50%);
     color: white;
 }
+
 .banner-text h1{
 font-size: 10vh;
 font-weight: bold;
 }
-/*----------section---------------*/
+
+
+
+/*----------Home page section---------------*/
 .article-container{
     padding-left: 10vw;
     padding-right: 10vw;
     margin-top: 5vh;
 }
+
 .article-flex{
     display: flex;
     padding-bottom: 5vh;
 }
+
+.article-flex img {
+	width: 25%;
+}
+
 .article-text-flex{
     display: flex;
     flex-direction: column;
 }
+
 article h1{
     font-size: 6vh;
     font-weight: bold;
 }
+
 article p{
     width: 85%;
     font-size: 2vh;
     font-weight: bold;
 }
+
 #events{
     padding-left: 1%;
 }
+
 .maps{
     width:100%;
     height:40vh;
