--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -440,6 +440,7 @@ canvas {
     width: calc(60% - 20px);
     height: 80%;
     margin: 0 0 0 20px;
+    padding: 0 9% 0 0;
 
     display: flex;
     flex-direction: column;
