--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -396,3 +396,98 @@ article p{
     border:0;
     padding-bottom: 5vh;
 }
+
+
+
+/* ## shopping cart */
+.cart-container {
+	width: 100%;
+	height: 80vh;
+	
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/cart-background.png");
+	background-repeat:no-repeat;
+	background-size: cover;
+	
+	overflow-x: hidden;
+}
+
+.cart-container h2 {
+	width: 45vw;
+	margin: 0 auto;
+	color: white;
+}
+
+.cart {
+	width: 70%;
+	height: 50%;
+	
+	margin: 5% auto 0 auto;
+	padding: 10px;
+
+	background-color: #151523;
+	border-radius: 5px;
+}
+
+.cart .cart-header {
+	color: white;
+	font-weight: bold;
+}
+
+.cart-bottom-container {
+	width: 70%;
+	height: 100px;
+
+	margin: 0 auto;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.cart-bottom-btn {
+	padding: 5px 30px;
+
+	font-size: 1.2rem;
+	text-decoration: none;
+
+	color: #151523;
+	background-color: white;
+}
+
+.cart-bottom-btn:hover {
+	font-weight: bold;
+}
+
+.cart-recommended-container {
+	width: 50vw;
+	margin: 0 auto;
+	display: flex;
+}
+
+.cart-recommended-container button {
+	margin: 0 5px;
+	font-size: 2.5rem;
+	font-weight: bold;
+
+	border: none;
+	cursor: pointer;
+
+	color: white;
+	background-color: transparent;
+}
+
+.recommended-slider-container {
+    width: 100%;
+}
+
+.recommended-element {
+    width: 100%;
+	height: 200px;
+	padding: 5px 15px;
+
+	border-radius: 5px;
+
+	color: white;
+	background-color: #151523;
+	
+ }
