--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -514,7 +514,7 @@ font-weight: lighter;
 }
 .cart span {
 	margin: 10px 0;
-	/* float: right; */
+	float: right;
 
 	font-size: 1.2rem;
 	font-weight: bold;
