--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -502,20 +502,27 @@ article p{
 
 
 .cart-table {
-	background-color: #151523;
 	color: white;
+	background-color: #151523;
 }
+
 .cart-table input {
 	width: 15%;
 	font-size: 1.2rem;
 }
-.cart-tbody {
-font-weight: lighter;
-}
-.cart span {
-	margin: 10px 0;
-	float: right;
 
+.cart-tbody {
+	font-weight: lighter;
+}
+
+.cart-total {
+	width: 100%;
+	padding: 10px 0;
+
+	text-align: right;
+}
+
+.cart span {
 	font-size: 1.2rem;
 	font-weight: bold;
 
