--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -402,13 +402,15 @@ article p{
 /* ## shopping cart */
 .cart-container {
 	width: 100%;
-	height: 80vh;
+	min-height: 80vh;
+
+	padding: 5% 0;
 	
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/cart-background.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 	
-	overflow-x: hidden;
+	/* overflow-y: hidden; */
 }
 
 .cart {
@@ -416,7 +418,7 @@ article p{
 	height: auto;
 	min-height: 30vh;
 	
-	margin: 5% auto 0 auto;
+	margin: 0 auto 0 auto;
 	padding: 10px;
 
 	background-color: #151523;
@@ -492,6 +494,7 @@ article p{
     width: 100%;
 	height: 200px;
 	padding: 5px 15px;
+	margin: 20px 0;
 
 	border-radius: 5px;
 
