--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -505,8 +505,14 @@ article p{
 
 
 .cart-table {
+	width: 100%;
+	text-align: center;
 	color: white;
 	background-color: #151523;
+
+	border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    border-collapse: collapse;
 }
 
 .cart-table input {
@@ -514,7 +520,16 @@ article p{
 	font-size: 1.2rem;
 }
 
+.cart-thead {
+	font-size: 1.3rem;
+}
+
+.cart-thead th, .cart-tbody td {
+	padding: 10px;
+}
+
 .cart-tbody {
+	font-size: 1.2rem;
 	font-weight: lighter;
 }
 
