--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -226,6 +226,37 @@
 }
 /* ## Tickets Dance */
 
+/* ## Tickets Dance NAV */
+
+.nav-tickets-dance{
+	margin:auto;
+    display:flex;
+    background-color: #151523;
+    color: white;
+}
+
+.nav-list-left-tickets-dance {
+    display:flex;
+    max-width: 95%;
+	list-style: none;
+}
+
+.nav-list-right-tickets-dance {
+	margin-left: auto;
+    display:flex;
+    max-width: 95%;
+	list-style: none;
+}
+
+.nav-item-tickets-dance{
+	margin: 5px 0 0 0;
+    display:flex;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /* ## Jazz */
 /* ## banner jazz */
 .Banner-jazz{
