--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -257,6 +257,25 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* ## Tickets Dance Table */
+
+.table-tickets-dance {
+	background-color: #151523;
+	color: white;
+	padding: 2%;
+	margin: 1%;
+	display: flex;
+	
+}
+
+.td-item-tickets-dance {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 25px;
+	padding: 5%;
+	display: inline-flex;
+	flex-direction: row;
+}
+
 /* ## Jazz */
 /* ## banner jazz */
 .Banner-jazz{
