--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -131,15 +131,6 @@
     text-decoration: none;
     color: var(--main-blue);
 }
-.header-searchbar {
-    margin: 0 10px 0 0;
-    padding: 0 0 0 5px;
-
-    border: none;
-    border-radius: 2px;
-
-    font-size: 1.5rem;
-}
 .cms-logout-link img {
     height: 30px;
 }
@@ -756,6 +747,46 @@ canvas {
 
 
 /* ## table for users */
+.users-search-container {
+    width: 95%;
+    margin: 0 0 10px 0;
+
+    display: flex;
+    justify-content: flex-end;
+}
+
+.user-searchbar {
+    padding: 0 0 0 5px;
+
+    border: 1px solid var(--main-lightblue);
+    border-radius: 2px;
+
+    font-size: 1.5rem;
+}
+
+.user-search-btn {
+    padding: 0 5px;
+
+    border: 1px solid var(--main-lightblue);
+    border-radius: 2px;
+
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.user-reset {
+    display: block;
+    padding: 2px 10px;
+    margin: 0 0 0 15px;
+    
+    font-size: 1.3rem;
+    font-weight: bolder;
+
+    border: 1px solid var(--main-lightblue);
+    text-decoration: none;
+    color: var(--main-blue);
+}
+
 .users-table-container {
     width: 95%;
     max-height: 50vh;
